  gpssnmp: Move from contrib/ to clients, add manpage
  Add www/gpsd-client-example-code.adoc
  Add gpsdebuginfo script and man page.
  ubxtool: Add BeiDou, Galileo, GLONASS, QZSS, and partial SBAS subframe decodes
  Max serial port speed raised to 921,600.
  SUBFRAME JSON now includes new fields to support multiple constellations.
  gpsd.c: Add some ADR and UDR message stubs.
  ubxtool: Add some ADR and UDR message polls and decodes.

3.22: 2021-01-08
  Added client/gpscsv to convert gpsd JSON to csv.
  Added client/gpsplot to dynamically plot gpsd JSON.
  Added client/gpssubframe to decode gpsd SUBFRAME JSON.
  Added nSat and uSat to SKY JSON.  Old clients can not read new SKY.
  Move stuff from source root into clients/, include/, gpsmon/ and libgps/.
  Move stuff from source root into gpsd/.
  Move class ubx out of ubxtool and into gps/ubx.py.
  Build all targets in gpsd-$VERSION/, not in tree.
  NMEA 4.11 support for $GI (IRNSS) and $GZ (QZSS).

3.21: 2020-08-04
  Create python programs from .in files to allow macro substitution.
  Finally clean .sconsign*.dblite with "scons -c"
  Remove revision.h.  Move REVISION into gpsd_config.h
  Change asciidoc to asciidoctor, and revise documents to match.
  library version bumped to 27
  Add leap_seconds to gps_data_t
  Add/change many rtcm2 structs in gps.h
  Add/change many rtcm3 structs in gps.h
  Maindenhead now 8 chars.
  Add icondir and sharedir install options
  Install basic doc in sharedir
  Move gps_data_t->status to gps_fix_t.status for better fix merging
  The gps python module is now Pure Python + FFI.  FFI only for packet.py
  User should manually delete any old packet*so.
  Add wspeedt, wspeedr, wanglem, wanglet, wangler to  gps_fix_t
  Add "-p CONFIG", "-p STATUS", "-t" and "-tt" options to ubxtool.
  Add python_shebang option to scons config.
  gpsrinex has long options and many new options.
  Added long options to gpsd.
  Remove unused FORCE_GLOBAL_ENABLE